--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-DATABASE_URL="postgresql://neondb_owner:rcuNKX1Gdl6F@ep-green-frog-a53iqbhr.us-east-2.aws.neon.tech/neondb?sslmode=require"
+DATABASE_URL=postgresql://neondb_owner:rcuNKX1Gdl6F@ep-green-frog-a53iqbhr.us-east-2.aws.neon.tech/neondb?sslmode=require
